Remove ignored files from tracking